# Wiola13M

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
Wiola13M/: generation_config.json  tokenizer.json  tokenizer_config.json
Wiola13M-checkpoint/checkpoint-500/: trainer_state.json
Wiola13M/checkpoint-18000/: config.json  generation_config.json  rng_state.pth  trainer_state.json
Wiola13M/checkpoint-19000/: trainer_state.json
Wiola13M/checkpoint-20000/: rng_state.pth  trainer_state.json
Wiola13M/logs/: events.out.tfevents.1783082606.LAPTOP-212CF2DR.43284.0
docs/: ARCHITECTURE.md  MODEL_CARD_TEMPLATE.md
examples/: create_tokenizer.py  generate.py  push_to_hub.py  train_tinystories.py
scripts/: quickstart.py
src/wiola13m/: __init__.py  configuration_wiola.py  modeling_wiola.py
tests/: test_config.py  test_generation.py  test_modeling.py
