[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiola13m"
version = "1.0.1"
description = "Wiola13M: A 12.9M parameter decoder-only language model featuring Gated Spiral Attention, Spiral RoPE, and Butterfly MLP."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "OSCOWL AI" }]

keywords = [
    "language-model",
    "transformer",
    "small-language-model",
    "slm",
    "rotary-positional-encoding",
    "attention",
    "pytorch",
    "huggingface",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "torch>=2.1",
    "transformers>=4.40,<4.46",
    "safetensors>=0.4.0",
    "numpy>=1.23",
]

[project.optional-dependencies]
train = ["datasets>=2.14", "tokenizers>=0.15", "accelerate>=0.28"]
hub = ["huggingface_hub>=0.23"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "black>=24.0",
]
all = [
    "wiola13m[train]",
    "wiola13m[hub]",
    "wiola13m[dev]",
]

[project.urls]
Homepage = "https://github.com/Wiola-OSCOWL-ai/Wiola13M"
Repository = "https://github.com/Wiola-OSCOWL-ai/Wiola13M"
Issues = "https://github.com/Wiola-OSCOWL-ai/Wiola13M/issues"
Documentation = "https://huggingface.co/oscowlai/Wiola13M"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E741"]

[tool.black]
line-length = 100
target-version = ["py39"]